# CPP-Console-Messenger

./: .gitignore  README.md
Client/: CMakeLists.txt
Client/include/: Client.hpp  Command.hpp  CommandResolverAbstract.hpp  Resolver.hpp
Client/source/: Client.cpp  Command.cpp  Main.cpp  Resolver.cpp
Server/: CMakeLists.txt
Server/include/: Client.hpp  Config.hpp  Connector.hpp  Database.hpp  HelloWorldRequestResolver.hpp  Logger.hpp  Message.hpp  RegisterRequestResolver.hpp  Request.hpp  Resolver.hpp  Server.hpp
Server/include/resolvers/: DisconnectRequestResolver.hpp  LoginRequestResolver.hpp  RequestResolverAbstract.hpp
Server/source/: Client.cpp  Database.cpp  HelloWorldRequestResolver.cpp  Logger.cpp  LoginRequestResolver.cpp  Main.cpp  Message.cpp  RegisterRequestResolver.cpp  Request.cpp  Resolver.cpp  Server.cpp
Server/source/resolvers/: DisconnectRequestResolver.cpp  HelloWorldRequestResolver.cpp  LoginRequestResolver.cpp  RegisterRequestResolver.cpp  RequestResolverAbstract.cpp
